Add postCreateCommand to devcontainer.json and update CSRF_TRUSTED_ORIGINS in settings.py

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,8 @@
 		}
 	}
 
+	"postCreateCommand": "apt-get update && apt-get install -y git",
+
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
